--- a/MMTTechnicalTest/appsettings.json
+++ b/MMTTechnicalTest/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MMTConn": "Server=localhost\\SQLEXPRESS;Database=MMTShop;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
